tests/baselines/reference/parserES5ComputedPropertyName10(target=es2015).errors.txt
parserES5ComputedPropertyName10.ts(2,5): error TS2304: Cannot find name 'e'.


==== parserES5ComputedPropertyName10.ts (1 errors) ====
    class C {
       [e] = 1
        ~
!!! error TS2304: Cannot find name 'e'.
    }